--- a/Exercises/Exercise31.ipynb
+++ b/Exercises/Exercise31.ipynb
@@ -272,7 +272,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x1a20a1a6f50>"
+       "<matplotlib.image.AxesImage at 0x268b15723e0>"
       ]
      },
      "execution_count": 7,
@@ -453,21 +453,21 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/5\n",
-      "1875/1875 [==============================] - 4s 2ms/step - loss: 0.3581 - accuracy: 0.8921\n",
+      "1875/1875 [==============================] - 4s 2ms/step - loss: 0.3677 - accuracy: 0.8899\n",
       "Epoch 2/5\n",
-      "1875/1875 [==============================] - 3s 2ms/step - loss: 0.1923 - accuracy: 0.9419\n",
+      "1875/1875 [==============================] - 3s 2ms/step - loss: 0.1886 - accuracy: 0.9427\n",
       "Epoch 3/5\n",
-      "1875/1875 [==============================] - 3s 2ms/step - loss: 0.1525 - accuracy: 0.9522\n",
+      "1875/1875 [==============================] - 3s 2ms/step - loss: 0.1459 - accuracy: 0.9553\n",
       "Epoch 4/5\n",
-      "1875/1875 [==============================] - 3s 2ms/step - loss: 0.1278 - accuracy: 0.9594\n",
+      "1875/1875 [==============================] - 3s 2ms/step - loss: 0.1223 - accuracy: 0.9626\n",
       "Epoch 5/5\n",
-      "1875/1875 [==============================] - 3s 2ms/step - loss: 0.1106 - accuracy: 0.9649\n"
+      "1875/1875 [==============================] - 3s 2ms/step - loss: 0.1060 - accuracy: 0.9669\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.src.callbacks.History at 0x1a20624de70>"
+       "<keras.src.callbacks.History at 0x268adb29300>"
       ]
      },
      "execution_count": 13,
@@ -528,13 +528,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "313/313 [==============================] - 1s 1ms/step - loss: 0.1349 - accuracy: 0.9598\n"
+      "313/313 [==============================] - 1s 1ms/step - loss: 0.1125 - accuracy: 0.9640\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[0.1348690688610077, 0.9598000049591064]"
+       "[0.11248064041137695, 0.9639999866485596]"
       ]
      },
      "execution_count": 14,
@@ -605,7 +605,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 0s 197ms/step\n",
+      "1/1 [==============================] - 0s 221ms/step\n",
       "[7 2 1 0 4]\n",
       "[7 2 1 0 4]\n"
      ]
@@ -700,21 +700,21 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/5\n",
-      "1875/1875 [==============================] - 4s 2ms/step - loss: 0.5713 - accuracy: 0.8494 - val_loss: 0.2594 - val_accuracy: 0.9247\n",
+      "1875/1875 [==============================] - 4s 2ms/step - loss: 0.5874 - accuracy: 0.8487 - val_loss: 0.2709 - val_accuracy: 0.9200\n",
       "Epoch 2/5\n",
-      "1875/1875 [==============================] - 4s 2ms/step - loss: 0.2316 - accuracy: 0.9315 - val_loss: 0.1908 - val_accuracy: 0.9434\n",
+      "1875/1875 [==============================] - 4s 2ms/step - loss: 0.2309 - accuracy: 0.9313 - val_loss: 0.1862 - val_accuracy: 0.9449\n",
       "Epoch 3/5\n",
-      "1875/1875 [==============================] - 4s 2ms/step - loss: 0.1694 - accuracy: 0.9492 - val_loss: 0.1792 - val_accuracy: 0.9443\n",
+      "1875/1875 [==============================] - 4s 2ms/step - loss: 0.1707 - accuracy: 0.9482 - val_loss: 0.1502 - val_accuracy: 0.9553\n",
       "Epoch 4/5\n",
-      "1875/1875 [==============================] - 4s 2ms/step - loss: 0.1345 - accuracy: 0.9601 - val_loss: 0.1415 - val_accuracy: 0.9581\n",
+      "1875/1875 [==============================] - 3s 2ms/step - loss: 0.1369 - accuracy: 0.9594 - val_loss: 0.1297 - val_accuracy: 0.9617\n",
       "Epoch 5/5\n",
-      "1875/1875 [==============================] - 4s 2ms/step - loss: 0.1133 - accuracy: 0.9661 - val_loss: 0.1169 - val_accuracy: 0.9631\n"
+      "1875/1875 [==============================] - 3s 2ms/step - loss: 0.1157 - accuracy: 0.9652 - val_loss: 0.1257 - val_accuracy: 0.9617\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.src.callbacks.History at 0x1a206a210c0>"
+       "<keras.src.callbacks.History at 0x268addf1cf0>"
       ]
      },
      "execution_count": 20,
@@ -774,7 +774,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 0s 48ms/step\n",
+      "1/1 [==============================] - 0s 51ms/step\n",
       "[7 2 1 0 4]\n",
       "[7 2 1 0 4]\n"
      ]
